# datamining

./: .gitignore  CMakeLists.txt  README.md  build.sh  exectuable.sh  loop.sh
src/: CMakeLists.txt  build.sh  cscope.sh  ctags.sh  debug.sh  exectuable.sh  loop.sh  main.cpp  valgrind-exe.sh
src/app/: scene_check.cpp  scene_check.h
src/core/: config  core.cpp  core.h  core_cfg.h
src/core/association/: apriori.cpp  apriori.h  association.cpp  association.h  fp_growth.cpp  fp_growth.h
src/core/clustering/: cluster_dataset.cpp  cluster_dataset.h  feature_extraction.cpp  feature_extraction.h  normalized.cpp  normalized.h  spectral_clustering.cpp  spectral_clustering.h
src/core/db/: database.cpp  database.h
src/core/dimen_reduction/: readme.txt
src/core/docs/: readme.txt
src/core/test/: data.cpp  data.h  operate_test.cpp  operate_test.h
src/core/tools/: combinmath.cpp  combinmath.h
src/libs/: readme.txt
